# crypto-data-pipeline

./: .gitignore  README.md  app.py  explore.py  pipeline.py  pyproject.toml
.github/workflows/: ci.yml  daily_pipeline.yml
.streamlit/: config.toml
scripts/: write_secrets.py
tests/: test_pipeline.py
transform/: dbt_project.yml
transform/models/marts/: mart_coin_daily.sql  schema.yml
transform/models/staging/: schema.yml  sources.yml  stg_coin_markets.sql
