[project]
name = "crypto-data-pipeline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dbt-bigquery>=1.11.1",
    "dlt[bigquery]>=1.27.2",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
